--- a/app/src/main/res/layout/viewholder_popular.xml
+++ b/app/src/main/res/layout/viewholder_popular.xml
@@ -96,4 +96,14 @@
         app:layout_constraintEnd_toStartOf="@+id/scoreTxt"
         app:layout_constraintTop_toTopOf="@+id/scoreTxt"
         app:srcCompat="@drawable/star" />
+
+    <ImageView
+        android:id="@+id/bookmarkBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/titleTxt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleTxt"
+        app:srcCompat="@drawable/ic_bookmark_border" />
 </androidx.constraintlayout.widget.ConstraintLayout>
