--- a/app/src/main/res/layout/viewholder_recommended.xml
+++ b/app/src/main/res/layout/viewholder_recommended.xml
@@ -95,4 +95,14 @@
         app:layout_constraintEnd_toStartOf="@+id/scoreTxt"
         app:layout_constraintTop_toTopOf="@+id/scoreTxt"
         app:srcCompat="@drawable/star" />
+
+    <ImageView
+        android:id="@+id/bookmarkBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/pic"
+        app:layout_constraintTop_toTopOf="@+id/pic"
+        app:srcCompat="@drawable/ic_bookmark_border" />
 </androidx.constraintlayout.widget.ConstraintLayout>
