--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="purple">#9a0ca4</color>
     <color name="darkBlue">#253f66</color>
     <color name="LightGray">#efefef</color>
+    <color name="red">#FF0000</color>
+    <color name="grey">#808080</color>
 </resources>
